<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_CRC_Params" Id="{edd7a7fb-6b87-408c-b98a-341884341885}">
    <Declaration><![CDATA[TYPE ST_CRC_Params :
STRUCT
    bitWidth      		: BYTE;
    polynomial       	: XWORD;
    initCRC       		: XWORD;
    reflectInitial      : BOOL;
    reflected     		: BOOL;
    xorOut     			: XWORD;
    check      			: XWORD;
    residue    			: XWORD;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>